Fixed background pattern on landing, on mobile

--- a/resources/assets/sass/_landing.sass
+++ b/resources/assets/sass/_landing.sass
@@ -566,6 +566,15 @@ body.index
 						line-height: 1.6
 						font-size: 14px
 
+@media all and (max-width: 870px)
+	body.index
+		header.header--landing
+			.header_bg_slides_container
+				.header_bg_slides
+					.header_bg_item
+						&.header_bg_item--1
+							background-position: 40vw 134px
+
 @media all and (max-width: 767px)
 	body.index
 		.slider_container
